Fixer dark mode

--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ body {
     top: 1rem;
     right: 1rem;
     display: block;
+    cursor: pointer;
 
     @media screen and (max-width: 768px)  {
         display: none;
